kubewarden/P0001-registry/policy-P0001.yaml
# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: portefaix-M0003
  metadata:
    annotations:
      io.kubewarden.policy.title: Authorized registry
      io.kubewarden.policy.category: Resource validation
      io.kubewarden.policy.severity: medium
      io.kubewarden.policy.description: >-
        This policy allows you to restrict which registry in your cluster
        can refer to
spec:
  module: registry://ghcr.io/kubewarden/policies/trusted-repos:v0.2.0
  rules:
  - apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    operations:
    - CREATE
    - UPDATE
  mutating: false
  settings:
    registries:
      allow:
      - docker.io
      - ghcr.io
      reject:
      - quay.io
